Fix spacing between tooltip button and textfield.

--- a/public/stylesheets/mdl-extensions.css
+++ b/public/stylesheets/mdl-extensions.css
@@ -1,4 +1,3 @@
-
 /****************
 Icons
  */
@@ -42,4 +41,15 @@ Data Table
 }
 .mdl-data-table--normal-white-space {
     white-space: normal;
+}
+
+/***************
+Misc
+ */
+
+.mdl-textfield--large-fix {
+    /* The textfield is actually 10px longer than its container
+     * we add 8*2=16px of spacing.
+     */
+    max-width: calc(100% - 26px);
 }
